terraform-ec2-enterprise/security.tf
resource "aws_security_group" "ec2_security_group" {
    name    = var.security_group_name
    description = "Allow SSH and HTTP access"
    vpc_id      = data.aws_vpc.default.id


ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}

ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}

egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
}
}
